Remove/rewrite tests in preparation for btree removal